# src/dtos/follow-dtos.ts
@@ -1,5 +1,3 @@
 import { Follow } from '@prisma/client';
 
-export type CreateFollowDTO = Pick<Follow, 'followingId'>;
-
-// export type DeleteLikeDTO = Pick<Like, 'threadId'>;
+export type CreateFollowDTO = Pick<Follow, 'followingId' | 'followedId'>;
