# src/routes/user-route.ts
@@ -8,10 +8,9 @@ import { initCloudinary } from '../middlewares/cloudinary-middleware';
 const router = express.Router();
 
 router.get('/', userController.getUsers);
-router.get('/search', userController.getUserSearch);
+router.get('/search', authCheck, userController.getUserSearch);
 router.post('/', userController.createUser);
 router.get('/:id', userController.getUserById);
-// router.get('/:username', userController.getUserByUsername);
 router.delete('/:id', userController.deleteUserById);
 router.patch('/:id', userController.updateUserById);
 router.patch(
