# src/utils/schemas/follow-schema.ts
@@ -4,8 +4,5 @@ import { CreateFollowDTO } from '../../dtos/follow-dtos';
 
 export const createFollowSchema = Joi.object<CreateFollowDTO>({
   followingId: Joi.string().uuid(),
+  followedId: Joi.string().uuid(),
 });
-
-// export const deleteLikeSchema = Joi.object<DeleteLikeDTO>({
-//   threadId: Joi.string().uuid(),
-// });
